# multithreaded-web-server

./: Cargo.toml
http/: Cargo.toml
http/src/: request.rs  response.rs
http_benchmarking/: Dockerfile
node_server/: index.js  package.json
parallel_task_executor/: Cargo.toml
parallel_task_executor/src/: lib.rs
scripts/: bench.sh  develop.sh  run.sh  test.sh
server/: Cargo.toml
server/data/: orders.json
server/public/: 404.html  index.html  main.js
server/src/: lib.rs  router.rs
server/src/router/: handlers.rs
server/src/router/handlers/: handler_trait.rs  page_not_found_handler.rs  static_page_handler.rs  web_service_handler.rs
src/: main.rs
